--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>This is my new webiste </title>
 </head>
 
 <body>
+    
+    <h1>This is my headline</h1>
     
 </body>
 </html>
